# gnu_netcdf-tools

./: .gitignore  AUTHORS  BUGS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac
doc/: Makefile.am  ncattget.xml  ncattput.xml  ncget.xml
lib/: Makefile.am
src/: Makefile  Makefile.am  dump_array.c  hdf_dump_array.c  hdf_memory_alloc.c  hdf_print_info.c  hdfdump.c  hdfdump.h  hdfindex.c  ncattget.c  ncattput.c  ncget.c  ncget.h  ncsel.c  print_nc_info.c
